// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testQuery 1`] = `
"query TestQuery {
  testQuery
}
"
`;

exports[`testQueryObject 1`] = `
"query TestQuery {
  testQueryObject {
    anotherField
    queryObject {
      queryField
    }
  }
}
"
`;

exports[`testQueryWithList 1`] = `
"query TestQuery {
  testQueryWithList
}
"
`;
